--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<title>Filipe Benedito</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="./src/assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="./src/assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
@@ -22,7 +22,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/banner.png" alt="Filipe Benedito se apresentando" />
+							<img src="/src/images/banner.png" alt="Filipe Benedito se apresentando" />
 						</div>
 					</section>
 
@@ -97,13 +97,13 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="./src/assets/js/jquery.min.js"></script>
+			<script src="/src/assets/js/jquery.scrollex.min.js"></script>
+			<script src="/src/assets/js/jquery.scrolly.min.js"></script>
+			<script src="/src/assets/js/browser.min.js"></script>
+			<script src="/src/assets/js/breakpoints.min.js"></script>
+			<script src="/src/assets/js/util.js"></script>
+			<script src="/src/assets/js/main.js"></script>
 
 	</body>
 </html>
