modified:   index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="./images/estacoes.png" alt="" />
+							<img src="./src/images/estacoes.png" alt="" />
 						</div>
 					</section>
 
@@ -50,7 +50,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="./images/elementos.png" alt="" />
+							<img src="./src/images/elementos.png" alt="" />
 						</div>
 					</section>
 
