added a email api

--- a/index.html
+++ b/index.html
@@ -1,109 +1,219 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="pt-br">
-	<head>
-		<title>Filipe Benedito</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="./src/assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="./src/assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
+  <head>
+    <title>Filipe Benedito</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
+    <link rel="stylesheet" href="./src/assets/css/main.css" />
+    <noscript
+      ><link rel="stylesheet" href="./src/assets/css/noscript.css"
+    /></noscript>
+  </head>
+  <body class="is-preload">
+    <!-- Wrapper -->
+    <div id="wrapper" class="divided">
+      <!-- One -->
+      <section
+        class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right"
+      >
+        <div class="content">
+          <h1>Filipe Benedito</h1>
+          <p class="major">
+            Nasceu no interior de Minas Gerais no ano de 1998; Cantor,
+            multi-instrumentista, e compositor de mais de 30 canções.
+          </p>
+          <ul class="actions stacked">
+            <li>
+              <a href="#contat" class="button big wide smooth-scroll-middle"
+                >Contato</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="image">
+          <img
+            src="/src/images/banner.png"
+            alt="Filipe Benedito se apresentando"
+          />
+        </div>
+      </section>
 
-		<!-- Wrapper -->
-			<div id="wrapper" class="divided">
+      <!-- Two -->
+      <section
+        class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in"
+        id="first"
+      >
+        <div class="content">
+          <h2>Estações</h2>
+          <p>
+            Na primavera de 2021 lançou seu primeiro EP,
+            <a
+              target="_blank"
+              href="https://open.spotify.com/intl-pt/track/2l83ZkqLgx1kCCXChIGyGd"
+              >Estações</a
+            >, produzido por
+            <a
+              target="_blank"
+              href="https://open.spotify.com/intl-pt/artist/6wHdlMEQAaPJ4IN4YQoM9h"
+              >Bruno Pividori</a
+            >, com canções homônimas às estações do ano e lançadas em suas
+            respectivas estações, o álbum tem grande influência do MPB e do
+            Folk, cada canção retrata de forma poética através do retrato das
+            estações, ou seja, do que há fora, do visível, uma representação do
+            que há dentro, o que não é visto, mas pode ser observado através
+            dessa didática do Criador.
+          </p>
+          <ul class="actions stacked">
+            <iframe
+              style="border-radius: 12px"
+              src="https://open.spotify.com/embed/album/5hQqK3ioSbSHSiMflHbERA?utm_source=generator&theme=0"
+              width="100%"
+              height="352"
+              frameborder="0"
+              allowfullscreen=""
+              allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+              loading="lazy"
+            ></iframe>
+          </ul>
+        </div>
+        <div class="image">
+          <img src="./src/images/estacoes.png" alt="" />
+        </div>
+      </section>
 
-				<!-- One -->
-					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
-						<div class="content">
-							<h1>Filipe Benedito</h1>
-							<p class="major"> Nasceu no interior de Minas Gerais no ano de 1998; Cantor, multi-instrumentista, e compositor de mais de 30 canções.</p>
-							<ul class="actions stacked">
-								<li><a href="#contat" class="button big wide smooth-scroll-middle">Contato</a></li>
-							</ul>
-						</div>
-						<div class="image">
-							<img src="/src/images/banner.png" alt="Filipe Benedito se apresentando" />
-						</div>
-					</section>
+      <!-- Three -->
+      <section
+        class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in"
+      >
+        <div class="content">
+          <h2>Elementos</h2>
+          <p>
+            No fim de 2023 lançou seu segundo EP chamado que conta com
+            participação do duo
+            <a
+              target="_blank"
+              href="https://open.spotify.com/intl-pt/artist/4DPWhihNMGBAgXYyYLOXn7"
+              >Cether</a
+            >
+            e de
+            <a
+              target="_blank"
+              href="https://open.spotify.com/intl-pt/artist/3zcxpC7aMef9wLKdM1vXeq"
+              >Larissa Oliveira</a
+            >, trazendo canções com nome dos elementos da natureza, recheando o
+            álbum com músicas de gêneros que variam do Folk ao Blues, combinando
+            originalidade, poesia e autenticidade em cada canção, dessa vez
+            trazendo o que está escondido dentro dos pensamentos e emoções e
+            colocando pra fora nas representações dos elementos da natureza, a
+            força da Água, a sensibilidade da Terra, a leveza do Ar, a
+            imprevisibilidade do Fogo.
+          </p>
+          <ul class="actions stacked">
+            <iframe
+              style="border-radius: 12px"
+              src="https://open.spotify.com/embed/album/5TJEQjV5Snb11CmwOkzMWy?utm_source=generator&theme=0"
+              width="100%"
+              height="352"
+              frameborder="0"
+              allowfullscreen=""
+              allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+              loading="lazy"
+            ></iframe>
+          </ul>
+        </div>
+        <div class="image">
+          <img src="./src/images/elementos.png" alt="" />
+        </div>
+      </section>
+	  
 
-				<!-- Two -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
-						<div class="content">
-							<h2>Estações</h2>
-							<p>Na primavera de 2021 lançou seu primeiro EP, <a target="_blank" href="https://open.spotify.com/intl-pt/track/2l83ZkqLgx1kCCXChIGyGd">Estações</a>, produzido por <a target="_blank" href="https://open.spotify.com/intl-pt/artist/6wHdlMEQAaPJ4IN4YQoM9h">Bruno Pividori</a>, com canções homônimas às estações do ano e lançadas em suas respectivas estações, o álbum tem grande influência do MPB e do Folk, cada canção retrata de forma poética através do retrato das estações, ou seja, do que há fora, do visível, uma representação do que há dentro, o que não é visto, mas pode ser observado através dessa didática do Criador. </p>
-							<ul class="actions stacked">
-								<iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/5hQqK3ioSbSHSiMflHbERA?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-							</ul>
-						</div>
-						<div class="image">
-							<img src="./src/images/estacoes.png" alt="" />
-						</div>
-					</section>
+      <!-- Seven -->
+      <section id="contat" class="wrapper style1 align-center">
+        <div class="inner medium">
+          <h2>Contato</h2>
+          <form action="https://api.web3forms.com/submit" method="POST">
+			<input type="hidden" name="access_key" value="903ab113-2a9e-497d-9bec-df20f57c901a">
+            <div class="fields">
+              <div class="field half">
+                <label for="name">Nome</label>
+                <input type="text" name="name" id="name" value="" />
+              </div>
+			  <div class="field half">
+                <label for="phone">Telefone</label>
+                <input type="text" name="phone" id="phone" value="" />
+              </div>
+              <div class="field ">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" value="" />
+              </div>
+			  
+              <div class="field">
+                <label for="message">Mensagem</label>
+                <textarea name="message" id="message" rows="6"></textarea>
+              </div>
+            </div>
+			<input type="hidden" name="redirect" value="http://127.0.0.1:3000/obrigado.html">
+			<input type="checkbox" name="botcheck" class="hidden" style="display: none;">
+            <ul class="actions special">
+              <li>
+                <input
+                  type="submit"
+                  name="submit"
+                  id="submit"
+                  value="Enviar Mensagem"
+                />
+              </li>
+            </ul>
+			
+          </form>
+        </div>
+      </section>
 
-				<!-- Three -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
-						<div class="content">
-							<h2>Elementos</h2>
-							<p>No fim de 2023 lançou seu segundo EP chamado  que conta com participação do duo <a target="_blank" href="https://open.spotify.com/intl-pt/artist/4DPWhihNMGBAgXYyYLOXn7">Cether</a> e de <a target="_blank" href="https://open.spotify.com/intl-pt/artist/3zcxpC7aMef9wLKdM1vXeq">Larissa Oliveira</a>, trazendo canções com nome dos elementos da natureza, recheando o álbum com músicas de gêneros que variam do Folk ao Blues, combinando originalidade, poesia e autenticidade em cada canção, dessa vez trazendo o que está escondido dentro dos pensamentos e emoções e colocando pra fora nas representações dos elementos da natureza, a força da Água, a sensibilidade da Terra, a leveza do Ar, a imprevisibilidade do Fogo.</p>
-							<ul class="actions stacked">
-								<iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/5TJEQjV5Snb11CmwOkzMWy?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-							</ul>
-						</div>
-						<div class="image">
-							<img src="./src/images/elementos.png" alt="" />
-						</div>
-					</section>
+      <!-- Footer -->
+      <footer class="wrapper style1 align-center">
+        <div class="inner">
+          <ul class="icons">
+            <li>
+              <a
+                target="_blank"
+                href="https://www.facebook.com/FilipeBeneditoOficial"
+                class="icon brands style2 fa-facebook-f"
+                ><span class="label">Facebook</span></a
+              >
+            </li>
+            <li>
+              <a
+                target="_blank"
+                href="https://www.instagram.com/ofilipebenedito/"
+                class="icon brands style2 fa-instagram"
+                ><span class="label">Instagram</span></a
+              >
+            </li>
+          </ul>
+          <p>
+            &copy; Desenvolvido por
+            <a
+              target="_blank"
+              href="https://nelsonbenedito.github.io/portifolio/"
+              >Nelson Benedito</a
+            >.
+          </p>
+        </div>
+      </footer>
+    </div>
 
-				
-
-				<!-- Seven -->
-					<section id="contat" class="wrapper style1 align-center">
-						<div class="inner medium">
-							<h2>Contato</h2>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field half">
-										<label for="name">Nome</label>
-										<input type="text" name="name" id="name" value="" />
-									</div>
-									<div class="field half">
-										<label for="email">Email</label>
-										<input type="email" name="email" id="email" value="" />
-									</div>
-									<div class="field">
-										<label for="message">Mensagem</label>
-										<textarea name="message" id="message" rows="6"></textarea>
-									</div>
-								</div>
-								<ul class="actions special">
-									<li><input type="submit" name="submit" id="submit" value="Enviar Mensagem" /></li>
-								</ul>
-							</form>
-
-						</div>
-					</section>
-
-				<!-- Footer -->
-					<footer class="wrapper style1 align-center">
-						<div class="inner">
-							<ul class="icons">
-								<li><a target="_blank" href="https://www.facebook.com/FilipeBeneditoOficial" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a target="_blank" href="https://www.instagram.com/ofilipebenedito/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-							</ul>
-							<p>&copy; Desenvolvido por <a target="_blank" href="https://nelsonbenedito.github.io/portifolio/">Nelson Benedito</a>.</p>
-						</div>
-					</footer>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="./src/assets/js/jquery.min.js"></script>
-			<script src="/src/assets/js/jquery.scrollex.min.js"></script>
-			<script src="/src/assets/js/jquery.scrolly.min.js"></script>
-			<script src="/src/assets/js/browser.min.js"></script>
-			<script src="/src/assets/js/breakpoints.min.js"></script>
-			<script src="/src/assets/js/util.js"></script>
-			<script src="/src/assets/js/main.js"></script>
-
-	</body>
+    <!-- Scripts -->
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+	<script src="./src/assets/js/contact.js"></script>
+    <script src="./src/assets/js/jquery.min.js"></script>
+    <script src="/src/assets/js/jquery.scrollex.min.js"></script>
+    <script src="/src/assets/js/jquery.scrolly.min.js"></script>
+    <script src="/src/assets/js/browser.min.js"></script>
+    <script src="/src/assets/js/breakpoints.min.js"></script>
+    <script src="/src/assets/js/util.js"></script>
+    <script src="/src/assets/js/main.js"></script>
+  </body>
 </html>
