fixed thanks screen

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="content">
           <h1>Filipe Benedito</h1>
           <p class="major">
-            Nasceu no interior de Minas Gerais no ano de 1998; Cantor,
+            Nasceu no interior de Minas Gerais no ano de 1998;<br> Cantor,
             multi-instrumentista, e compositor de mais de 30 canções.
           </p>
           <ul class="actions stacked">
@@ -155,7 +155,7 @@
                 <textarea name="message" id="message" rows="6"></textarea>
               </div>
             </div>
-			<input type="hidden" name="redirect" value="http://127.0.0.1:3000/obrigado.html">
+			<input type="hidden" name="redirect" value="https://filipebenedito.com.br/obrigado.html">
 			<input type="checkbox" name="botcheck" class="hidden" style="display: none;">
             <ul class="actions special">
               <li>
