modified:   index.html

--- a/index.html
+++ b/index.html
@@ -2,11 +2,38 @@
 <html lang="pt-br">
   <head>
     <title>Filipe Benedito</title>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content="Filipe Benedito" />
     <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
+      name="description"
+      content="Nasceu no interior de Minas Gerais no ano de 1998;
+      Cantor, multi-instrumentista, e compositor de mais de 30 canções."
     />
+    <meta name="keywords" content="investimentos, assessoria, bolsa" />
+    <meta name="author" content="Filipe Benedito" />
+
+    <!-- Open Graph para redes sociais -->
+    <meta property="og:title" content="Filipe Benedito" />
+    <meta
+      property="og:description"
+      content="Nasceu no interior de Minas Gerais no ano de 1998;
+    Cantor, multi-instrumentista, e compositor de mais de 30 canções."
+    />
+    <meta property="og:image" content="src/images/banner.png" />
+   
+    <meta property="og:url" content="https://filipebenedito.com.br" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Filipe Benedito" />
+    <meta
+      name="twitter:description"
+      content="Nasceu no interior de Minas Gerais no ano de 1998;
+      Cantor, multi-instrumentista, e compositor de mais de 30 canções."
+    />
+    <meta name="twitter:image" content="src/images/banner.png" />
     <link rel="stylesheet" href="./src/assets/css/main.css" />
     <noscript
       ><link rel="stylesheet" href="./src/assets/css/noscript.css"
@@ -22,8 +49,8 @@
         <div class="content">
           <h1>Filipe Benedito</h1>
           <p class="major">
-            Nasceu no interior de Minas Gerais no ano de 1998;<br> Cantor,
-            multi-instrumentista, e compositor de mais de 30 canções.
+            Nasceu no interior de Minas Gerais no ano de 1998;<br />
+            Cantor, multi-instrumentista, e compositor de mais de 30 canções.
           </p>
           <ul class="actions stacked">
             <li>
@@ -128,35 +155,47 @@
           <img src="./src/images/elementos.png" alt="" />
         </div>
       </section>
-	  
 
       <!-- Seven -->
       <section id="contat" class="wrapper style1 align-center">
         <div class="inner medium">
           <h2>Contato</h2>
           <form action="https://api.web3forms.com/submit" method="POST">
-			<input type="hidden" name="access_key" value="903ab113-2a9e-497d-9bec-df20f57c901a">
+            <input
+              type="hidden"
+              name="access_key"
+              value="903ab113-2a9e-497d-9bec-df20f57c901a"
+            />
             <div class="fields">
               <div class="field half">
                 <label for="name">Nome</label>
                 <input type="text" name="name" id="name" value="" />
               </div>
-			  <div class="field half">
+              <div class="field half">
                 <label for="phone">Telefone</label>
                 <input type="text" name="phone" id="phone" value="" />
               </div>
-              <div class="field ">
+              <div class="field">
                 <label for="email">Email</label>
                 <input type="email" name="email" id="email" value="" />
               </div>
-			  
+
               <div class="field">
                 <label for="message">Mensagem</label>
                 <textarea name="message" id="message" rows="6"></textarea>
               </div>
             </div>
-			<input type="hidden" name="redirect" value="https://filipebenedito.com.br/obrigado.html">
-			<input type="checkbox" name="botcheck" class="hidden" style="display: none;">
+            <input
+              type="hidden"
+              name="redirect"
+              value="https://filipebenedito.com.br/obrigado.html"
+            />
+            <input
+              type="checkbox"
+              name="botcheck"
+              class="hidden"
+              style="display: none"
+            />
             <ul class="actions special">
               <li>
                 <input
@@ -167,7 +206,6 @@
                 />
               </li>
             </ul>
-			
           </form>
         </div>
       </section>
@@ -207,7 +245,7 @@
 
     <!-- Scripts -->
     <script src="https://smtpjs.com/v3/smtp.js"></script>
-	<script src="./src/assets/js/contact.js"></script>
+    <script src="./src/assets/js/contact.js"></script>
     <script src="./src/assets/js/jquery.min.js"></script>
     <script src="/src/assets/js/jquery.scrollex.min.js"></script>
     <script src="/src/assets/js/jquery.scrolly.min.js"></script>
